# libRandomizer

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  libRandom.py  libRandomizer.pro  pyproject.toml  random.cpp  random.h
.github/workflows/: ci.yml
datasets/: catalog.json
debug/: random.h
docs/: API_REFERENCE.md  BETA_BURNDOWN.md  CONFORMANCE.md  DATASETS.md  PRODUCT_SCOPE.md  RELEASE_CHECKLIST.md  SDK_PARITY_STATUS.md  index.html  site.js  styles.css
docs/assets/: beta-output-types.json
scripts/: generate_beta_release.py  generate_native_sdk_surfaces.py  sync_beta_docs.py
spec/beta/: README.md  conformance.json  output-types.json  output-types.schema.json
spec/training/: README.md
spec/v1/: README.md  conformance.json
src/: libRandom.py
src/librandomizer/: __init__.py  cli.py  core.py  training.py
src/librandomizer/data/: dataset-metadata.json  output-types.json
tests/: test_beta_release.py  test_cli.py  test_core.py  test_docs_training_positioning.py  test_sdk_layout.py  test_training_data.py
